--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: Victor Campos
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My name is Victor, I'm a developer, web designer and gamer from Costa Rica.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://vic797.github.io"
 
