--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   i do stuff, sometimes good, sometimes bad, but i have fun
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://www.binary1024.xyz/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 plugins:
