--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,4 +1,28 @@
 -
+  title: Way-points | Part of the Commands Series
+  description: This pack provides way-points to any survival single or multiplayer. This locations are shared with every player on servers. With some other data packs on this series any player can teleport to any way-point with a single command. 
+  links:
+    -
+      url: https://www.planetminecraft.com/data-pack/way-points-part-of-the-commands-series/
+      text: Post
+
+-
+  title: Telerports | Library | Part of the Commands Serie
+  description: This is a module for Commands Core that provides teleporting capabilities to other data packs from this same series using scoreboards.
+  links:
+    -
+      url: https://www.planetminecraft.com/data-pack/telerports-library-part-of-the-commands-series/
+      text: Post
+
+-
+  title: GPS | Part of the Commands Series
+  description: This is yet another coordinates HUD but it also provides functionalities to some of the next data packs.
+  links:
+    -
+      url: https://www.planetminecraft.com/data-pack/binary-s-gps/
+      text: Post
+
+-
   title: Commands Core
   description: This is the core data pack for some of my upcoming data packs.
   links:
