--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,4 +1,12 @@
 -
+  title: Light | Part of the Commands Series
+  description: This data pack provides a light metter to the player.
+  links:
+    -
+      url: https://www.planetminecraft.com/data-pack/light-part-of-the-commands-series/
+      text: Post
+
+-
   title: Way-points | Part of the Commands Series
   description: This pack provides way-points to any survival single or multiplayer. This locations are shared with every player on servers. With some other data packs on this series any player can teleport to any way-point with a single command. 
   links:
